syntax = "proto3";

package wendycloud.v1;

import "google/protobuf/timestamp.proto";

service OrganizationService {
  rpc CreateOrganization(CreateOrganizationRequest) returns (Organization);
  rpc GetOrganization(GetOrganizationRequest) returns (Organization);
  rpc UpdateOrganization(UpdateOrganizationRequest) returns (Organization);
  rpc DeleteOrganization(DeleteOrganizationRequest) returns (DeleteOrganizationResponse);
  rpc ListOrganizations(ListOrganizationsRequest) returns (ListOrganizationsResponse);

  rpc AddMember(AddMemberRequest) returns (OrganizationMember);
  rpc AddMembersByEmails(AddMembersByEmailsRequest) returns (AddMembersByEmailsResponse);
  rpc UpdateMemberRole(UpdateMemberRoleRequest) returns (OrganizationMember);
  rpc RemoveMember(RemoveMemberRequest) returns (RemoveMemberResponse);
  rpc ListMembers(ListMembersRequest) returns (ListMembersResponse);
}

enum OrganizationRole {
  ORGANIZATION_ROLE_UNSPECIFIED = 0;
  ORGANIZATION_ROLE_OWNER = 1;
  ORGANIZATION_ROLE_ADMIN = 2;
  ORGANIZATION_ROLE_BILLING_MANAGER = 3;
  ORGANIZATION_ROLE_MEMBER = 4;
  ORGANIZATION_ROLE_VIEWER = 5;
}

message Organization {
  int32 id = 1;
  string name = 2;
  string details = 3;
  optional string domain = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message OrganizationMember {
  int32 id = 1;
  int32 organization_id = 2;
  string user_id = 3;
  OrganizationRole role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateOrganizationRequest {
  string name = 1;
  string details = 2;
  optional string domain = 3;
}

message GetOrganizationRequest {
  int32 id = 1;
}

message UpdateOrganizationRequest {
  int32 id = 1;
  optional string name = 2;
  optional string details = 3;
  optional string domain = 4;
}

message DeleteOrganizationRequest {
  int32 id = 1;
}

message DeleteOrganizationResponse {
  bool success = 1;
}

message ListOrganizationsRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message ListOrganizationsResponse {
  repeated Organization organizations = 1;
  string next_page_token = 2;
}

message AddMemberRequest {
  int32 organization_id = 1;
  string user_id = 2;
  OrganizationRole role = 3;
}

message UpdateMemberRoleRequest {
  int32 id = 1;
  OrganizationRole role = 2;
}

message RemoveMemberRequest {
  int32 id = 1;
}

message RemoveMemberResponse {
  bool success = 1;
}

message ListMembersRequest {
  int32 organization_id = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListMembersResponse {
  repeated OrganizationMember members = 1;
  string next_page_token = 2;
}

message EmailWithRole {
  string email = 1;
  OrganizationRole role = 2;
}

message AddMembersByEmailsRequest {
  int32 organization_id = 1;
  repeated EmailWithRole members = 2;
}

message AddMemberResult {
  string email = 1;
  bool success = 2;
  string error = 3;
  OrganizationMember member = 4;
}

message AddMembersByEmailsResponse {
  repeated AddMemberResult results = 1;
}
